Move UnsafeUtil to base module